# m3gdecompile

./: CMakeLists.txt  README
data/: 333.m3g  airplane.m3g  anim_background.m3g  anim_hierarchy_2.m3g  anim_material.m3g  anim_morph.m3g  anim_texture_rotation.m3g  camera.m3g  materials_multi.m3g  mesh_biped_1.m3g  mesh_biped_2.m3g  mesh_complex_modifier.m3g  mesh_vertex_colour.m3g  morph_5.m3g  skin_biped_1.m3g  skin_cylinder_1_mesh_on_bone.m3g  skin_girl_simple_anim_1.m3g  texture_bump.m3g  texture_mapping_2.m3g  texture_sequence.m3g
src/: CMakeLists.txt  exceptions.h  m3gconstants.h  m3gfile.c  m3gfile.cpp  m3gfile.h  m3gformat.cpp  m3gformat.h  m3gtypes.h  main.c  main.cpp  property.h  stream.cpp  stream.h  type_props.cpp  type_props.h
src/objects/: animation_controller.h  animation_track.h  appearance.h  appearance_base.h  background.h  base.h  camera.h  compositing_mode.h  external_image_ref.h  external_object_ref.h  external_ref.h  fog.h  group.h  header.h  image2D.h  image2d.h  image_base.h  index_buffer.h  keyframe_sequence.h  node.h  object3d.h  trandformable.h  transformable.h
